--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-
+production_url : adamvi
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 JB :
@@ -99,19 +99,42 @@ JB :
   sharing :
     provider : false
     
+navbar:
+  - name: About Me
+    link: '#fakeAboutLink'
+
+  - name: Pages
+    menu: true
+    - label: Main Item 1
+      link:  '#fakeLink1'
+    - label: Main Item 2 - Sub Menu
+      link:  404.html
+      submenu: true
+      - label: Sub-Item 1
+        link:  404.html
+      - label: Sub-Item 2
+        link:  404.html
+      - label: Sub-Item 3
+        link:  404.html
+    - label: Main Item 3
+      link:  404.html
+
+  - name: Contact Me
+    link: '#fakeContactLink'
+
 
   # Special section for Hive theme - 'footer social' 
   # Puts social icons/links into each "post" footer section along with the copyright info.
 footer_social:
-  - type: github
+  - type: GitHub
     link: https://github.com/adamvi
     image: images/social-icon/github.png
 
-  - type: linkedin
+  - type: LinkedIn
     link: my.linkedin.handle
     image: images/social-icon/linkedin.png
 
-  - type: twitter
+  - type: Twitter
     link: my.twit.handle
     image: images/social-icon/twitter.png
 
