--- a/_config.yml
+++ b/_config.yml
@@ -99,28 +99,33 @@ JB :
   sharing :
     provider : false
     
-navbar:
-  - name: About Me
+navbar: 
+  - 
+    name: Projects
+    menu: 
+      - 
+        label: Dissertation
+        link: 404.html 
+      - 
+        label: White Papers
+        submenu: 
+          - 
+            label: Conceptualizing Uncertainty in Student Growth Percentiles
+            link: 404.html
+          - 
+            label: Measurement Error Models for Latent Trait Estimates
+            link: misc/VanIwaarden_Measurement Error Models in Latent Trait Estimates_063013.pdf
+          - 
+            label: Using Rasch Fit Statistics in Small Sample Pilot Tests
+            link: misc/VanIwaarden_MSR2_DRAFT_050310.pdf
+
+  -
+    name: About Me 
     link: about.html
 
-  - name: Pages
-    menu: true
-    - label: Main Item 1
-      link:  '#fakeLink1'
-    - label: Main Item 2 - Sub Menu
-      link:  404.html
-      submenu: true
-      - label: Sub-Item 1
-        link:  404.html
-      - label: Sub-Item 2
-        link:  404.html
-      - label: Sub-Item 3
-        link:  404.html
-    - label: Main Item 3
-      link:  404.html
-
-  - name: Contact Me
-    link: '#fakeContactLink'
+  -
+    name: Contact Me 
+    link: contact.html
 
 
   # Special section for Hive theme - 'footer social' 
